export abstract class Where {
  public abstract toString(): string
}
